--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,16 @@
 .DS_Store
 .idea
 .vscode
+.htmlhintrc
+.stylelintrc.js
+csscomb.json
+
 *.ai
 *.log
 *.pdf
 *.psd
 *.sublime*
+
 node_modules/
 npm-debug.*
 Thumbs.db
-sass/
